[gd_scene load_steps=6 format=3 uid="uid://bcw831pkbbl3v"]

[ext_resource type="Script" uid="uid://bykfxdf8okqps" path="res://hud/hud_option_menu.gd" id="1_cm7b8"]
[ext_resource type="Theme" uid="uid://dc5mof4oa3hlk" path="res://main_theme_for_hud_stuff.tres" id="1_divn7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6j8g"]
bg_color = Color(0.382735, 0.497794, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qegli"]
bg_color = Color(0.388844, 0.581371, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vbn6v"]
bg_color = Color(0.638413, 0.758294, 1, 1)

[node name="HUD_OptionMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_cm7b8")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 779.0
offset_bottom = 731.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 261.0
offset_right = 349.0
offset_bottom = 23.0
scale = Vector2(3, 3)
theme = ExtResource("1_divn7")
text = "OPTION"

[node name="Group" type="Node2D" parent="."]

[node name="soundLabel" type="Label" parent="Group"]
offset_left = 119.0
offset_top = 234.0
offset_right = 301.0
offset_bottom = 257.0
scale = Vector2(3, 3)
theme = ExtResource("1_divn7")
text = "SOUND VOLUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGMLabel" type="Label" parent="Group"]
offset_left = 121.0
offset_top = 370.0
offset_right = 303.0
offset_bottom = 393.0
scale = Vector2(3, 3)
theme = ExtResource("1_divn7")
text = "BGM VOLUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="soundEffectVolume" type="ColorRect" parent="Group"]
offset_left = 119.0
offset_top = 326.0
offset_right = 654.0
offset_bottom = 345.0
color = Color(4.9334e-07, 0, 0.300713, 1)

[node name="HSlider" type="HSlider" parent="Group/soundEffectVolume"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 531.0
offset_bottom = 17.0
theme_override_styles/slider = SubResource("StyleBoxFlat_k6j8g")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_qegli")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_vbn6v")
min_value = -40.0
max_value = 0.0
value = -20.0

[node name="BGMVolume" type="ColorRect" parent="Group"]
offset_left = 119.0
offset_top = 466.0
offset_right = 654.0
offset_bottom = 485.0
color = Color(4.9334e-07, 0, 0.300713, 1)

[node name="HSlider" type="HSlider" parent="Group/BGMVolume"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 531.0
offset_bottom = 17.0
theme_override_styles/slider = SubResource("StyleBoxFlat_k6j8g")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_qegli")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_vbn6v")
min_value = -40.0
max_value = 0.0
value = -20.0

[node name="goBack" type="Button" parent="."]
offset_left = 382.0
offset_top = 641.0
offset_right = 508.0
offset_bottom = 665.0
scale = Vector2(3, 3)
theme = ExtResource("1_divn7")
text = "<GO BACK
"

[connection signal="drag_ended" from="Group/soundEffectVolume/HSlider" to="." method="_onSoundEffectVol_slider_drag_ended"]
[connection signal="drag_ended" from="Group/BGMVolume/HSlider" to="." method="_on_BGMVolumeSlider_drag_ended"]
[connection signal="pressed" from="goBack" to="." method="_on_go_back_pressed"]
